added product data